--- a/index.html
+++ b/index.html
@@ -70,8 +70,24 @@ body::before{
   .hud{margin-top:8px;display:flex;align-items:center;justify-content:space-between;gap:10px;background:var(--panel);border:1px solid #1c263a;border-radius:12px;padding:8px 10px}
   .row{display:flex;align-items:center;gap:12px;flex-wrap:wrap}
   .pill{background:#0d1422;border:1px solid #213054;border-radius:999px;padding:4px 10px;min-width:80px;text-align:center}
-  #gameShell{margin-top:8px;background:#0a0f1a;border:1px solid #1c263a;border-radius:12px;position:relative;overflow:hidden}
-  canvas{display:block;width:100%;height:auto}
+#gameShell{
+  margin-top:8px;
+  background:#0a0f1a;
+  border:1px solid #1c263a;
+  border-radius:12px;
+  position:relative;
+  overflow:hidden;
+  width:100%;
+  max-width:100%;
+}
+
+canvas{
+  display:block;
+  width:100% !important;
+  height:auto !important;
+  aspect-ratio:28/31; /* mantém a proporção do mapa */
+}
+
   .overlay{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;background:linear-gradient(180deg,rgba(8,12,20,.55),rgba(8,12,20,.75));backdrop-filter:blur(2px)}
   .card{background:#0e1524;border:1px solid #203152;border-radius:14px;padding:16px 14px;max-width:520px;text-align:center}
   .title{font-size:18px;font-weight:800;margin:0 0 6px}
@@ -868,27 +884,22 @@ body::before{
   bumpHUD(); 
   drawLives();
 
-  function fit(){
-    const shell = document.getElementById('gameShell');
-    const headerH = document.querySelector('header').getBoundingClientRect().height;
-    const hudH = document.querySelector('.hud').getBoundingClientRect().height;
-    const pad = 14;
-    const availableH = Math.max(360, window.innerHeight - headerH - hudH - pad*2);
-    const aspect = COLS/ROWS;
-    const maxW = Math.min(document.querySelector('.wrap').clientWidth - 2, 1400);
-    let targetH = availableH;
-    let targetW = targetH * aspect;
-    if(targetW > maxW){ 
-      targetW = maxW; 
-      targetH = targetW/aspect; 
-    }
-    canvas.width = Math.round(targetW * devicePixelRatio);
-    canvas.height = Math.round(targetH * devicePixelRatio);
-    canvas.style.width = targetW + "px";
-    canvas.style.height = targetH + "px";
-    tile = Math.floor(canvas.width/COLS);
-    shell.style.height = canvas.style.height;
-  }
+function fit(){
+  const shell = document.getElementById('gameShell');
+  const aspect = COLS / ROWS;
+
+  const targetW = shell.clientWidth;
+  const targetH = targetW / aspect;
+
+  canvas.width = Math.round(targetW * devicePixelRatio);
+  canvas.height = Math.round(targetH * devicePixelRatio);
+  canvas.style.width = targetW + "px";
+  canvas.style.height = targetH + "px";
+
+  tile = Math.floor(canvas.width / COLS);
+  shell.style.height = targetH + "px";
+}
+
   
   window.addEventListener('resize', fit, {passive: true});
   fit();
