update: ajustes no projeto

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
     <div class="actions">
       <a class="btn tw" href="https://x.com/PacCock" target="_blank" rel="noopener">🐦 Twitter</a>
-      <a class="btn buy" href="https://pump.tires" target="_blank" rel="noopener">🛒 Buy</a>
+      <a class="btn buy" href="https://pump.tires/token/0x369732EF45dF90c0D20e786B7C4782909772ff2a" target="_blank" rel="noopener">🛒 Buy</a>
     </div>
   </header>
 
